# near-simple-oracle

./: .gitignore  README.md
client-contract/: package.json
client-contract/src/: config.js
oracle-contract/: Cargo.toml  README.md  package.json
oracle-contract/res/: simple_oracle_contract.wasm
oracle-contract/src/: lib.rs
oracle-nodes/trusted-1/: oracle-node.js  package.json
